# argonautica

./: .gitignore
argonautica-c/: Cargo.toml
argonautica-c/src/: utils.rs
argonautica-rs/: Cargo.toml  build.rs
argonautica-rs/src/: ffi.rs  lib.rs  utils.rs
argonautica-rs/src/backend/rust/: decode.rs  encode.rs
argonautica-rs/src/input/: secret_key.rs
argonautica-rs/tests/: tests.rs
